  define the end of a line (by default it stays "\n" and "\r\n" for backward
  compatibility)
- adding early_memory_release parameter in class archive, this reduces the
  memory footprint in many cases, but avoids reusing an open archive to
  another operation (like in-fly isolation done by dar)
- using early_memory_release from dar CLI when sequential-read mode is used


from 2.7.7 to 2.7.8
- adapted code to workaround clang 10.0.1 bug under FreeBSD 12
- updating code and man page about the way to solve the conflict of
  sequentially reading the archive of reference when binary delta is
  implicitly present for differential/incremental backups
- added -avc option to surface libcurl verbose messages
- fixed bug in dar where a sanity check about slice min digit detection
  was applied to the local filesystem when the backup was stored
  remotely, this prevented the reading or remote backups
- exposing libcurl version to the version output (new API call added
  for that, leading upgrading libdar API to version 6.5.0)
- remove extra slash (/) found after hostname in URL passed to libcurl
- fixed self test reported error about mycurl_easyhandle_node.cpp
  line 176
- improved error message when libcurl fails to connect to an sftp server
- fixed bug in libdar in the way libcurl is called for reading a file
  using ftp protocol
- fixed bug in libdar when asking libcurl the size of the file we are
  writing (libcurl segfaults with ftp protocol). In addition, we now
  record this info during the write process (faster and more efficient).
- fixed bug met when creating a backup on very close and/or high
  bandwidth ftp and sftp repos with the --hash option set, triggering a
  race condition that led dar to sometime hang unexpectedly.

from 2.7.6 to 2.7.7
- added support for sequential reading more of sliced backup, to
  accommodate tape support used with slices (at the opposite of dar_split)
- fixing few typos in doc
- making libdar more tolerant when calls to fadvise fail
