@@ -232,8 +232,10 @@ Display raw information about the masks set by dar and passed to libdar
 activate verbose output from libcurl (remote repositories context). This is to be considered as a debug option relative to remote connection problems.
 .TP 20
 -q, --quiet
-Suppress the final statistics report. If no verbose output is asked beside this option, nothing is displayed if the operation succeeds. When using dar from a script better use dar's exit status to know which way the operation has ended (seen EXIT CODES at the end of this document)
-
+Suppress the final statistics report. If no verbose output is asked beside this option and -qcrypto (see below), nothing is displayed if the operation succeeds. When using dar from a script better use dar's exit status to know which way the operation has ended (seen EXIT CODES at the end of this document)
+.TP 20
+-qcrypto, --quiet=crypto
+Disable the warning that show when reading a ciphered backup about the impossibility to detect a wrong key
 .TP 20
 -b, --beep
 makes the terminal ring when user action is required (like for example the creation of a new slice using the -p option)
